<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uas_ros2</name>
  <version>0.0.0</version>
  <description>ROS2 drivers and functions for the UAS fleet of FSR@TUDa</description>
  <maintainer email="mueller@fsr.tu-darmstadt.de">robin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>auto_apms_behavior_tree</depend>
  <depend>auto_apms_px4</depend>
  <depend>laser_filters</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
